# cloudpilot

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  locustfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cloudpilot/: __init__.py  anomaly_detector.py  config.py  cost_optimizer.py  k8s_autotuner.py  load_tester.py  rl_scaling_model.pt  scaling.py  training_rl_scaler.py
cloudpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_anomaly_detector.py  test_cli.py  test_cost_optimizer.py  test_integration.py  test_k8s_autotuner.py  test_load_tester.py  test_scaling.py
